# pythonPlaywright

./: .gitignore  conftest.py  data.json  pyproject.toml  readme.md  test_with_codegen.py
tests/: teat_drag_drop.py  test_api.py  test_assertions.py  test_checkbox.py  test_dialog.py  test_download_file.py  test_fill_form.py  test_get_element_value.py  test_listen_network.py  test_load_file.py  test_screenshot.py  test_select.py  test_tabs.py  test_with_codegen.py
